package de.hdm_stuttgart.mi.datamanager;

public interface GameSpeedManager extends DataManager<Integer> {
    
}
