package de.hdm_stuttgart.mi.datamanager;

import de.hdm_stuttgart.mi.game.score.HighscoreList;

public interface HighscoreListManager extends DataManager<HighscoreList> {

}
